debug jenkins agent builder

--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -133,6 +133,8 @@ pipeline {
                         withCredentials([sshUserPrivateKey(credentialsId: 'ssh-key', keyFileVariable: 'SSH_KEY_FILE')]) {
                             sh """
                                 chmod 600 ${SSH_KEY_FILE}
+                                sh "ls -l ${SSH_KEY_FILE}"
+                                sh "head --lines 2 ${SSH_KEY_FILE}"
                                 python deploy-agent.py \
                                     --secret-file ${SECRET_FILE} \
                                     --metadata-file vm_metadata.json \
